--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e97d1fc0-3f63-468c-ab38-62812eecf82f"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
